force-app/src/objects/ffcmutil__MatchingReferenceLog__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingReferenceName__c</fullName>
        <label>Matching Reference Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Matching Reference Log</label>
    <nameField>
        <label>Matching Reference Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching References Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>